--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "node-sass": "4.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-lightbox": "5.1.4",
+    "react-router-dom": "5.3.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
